# Text-editor-rs

./: Cargo.toml  README.md
src/: buffer.rs  main.rs
