[package]
name = "fltk4"
version = "0.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fltk = { version = "*", features = ["fltk-bundled"] }
fltk-theme = "*"
nfde="*"
[profile.release]
strip=true
opt-level = "z"
lto=true
codegen-units = 1